fix: style update to remove scrollbars from buttons

--- a/mlforkids-api/public/components/training/training.css
+++ b/mlforkids-api/public/components/training/training.css
@@ -312,5 +312,5 @@ video.webcam-live {
     line-height: 16px;
     padding-top: 3px;
     text-wrap: nowrap;
-    overflow-x: scroll;
+    overflow: hidden;
 }
